--- a/vis/index.html
+++ b/vis/index.html
@@ -22,6 +22,7 @@
 
 <body>
   <div id="root"></div>
+  <div id="portal-root"></div>
   <script type="module" src="/src/main.tsx"></script>
 </body>
 
