fix: working tests

--- a/apps/vis/index.html
+++ b/apps/vis/index.html
@@ -11,6 +11,10 @@
 <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
+    <script>
+        window.__datajson__ = "DATA_JSON";
+        window.__metajson__ = "META_JSON";
+    </script>
 </body>
 
 </html>
