fix: working html report

--- a/apps/vis/index.html
+++ b/apps/vis/index.html
@@ -6,15 +6,19 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Baz</title>
+    <script>
+        document.onreadystatechange = () => {
+            if (document.readyState === "complete") {
+                window.__datajson__ = "DATA_JSON";
+                window.__metajson__ = "META_JSON";
+            }
+        };
+    </script>
 </head>
 
 <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
-    <script>
-        window.__datajson__ = "DATA_JSON";
-        window.__metajson__ = "META_JSON";
-    </script>
 </body>
 
 </html>
